python/versioned_docs/version-1.19/api/class-mouse.mdx
---
id: class-mouse
title: "Mouse"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

The Mouse class operates in main-frame CSS pixels relative to the top-left corner of the viewport.

Every `page` object has its own Mouse, accessible with [page.mouse](./api/class-page.mdx#page-mouse).

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
# using ‘page.mouse’ to trace a 100x100 square.
page.mouse.move(0, 0)
page.mouse.down()
page.mouse.move(0, 100)
page.mouse.move(100, 100)
page.mouse.move(100, 0)
page.mouse.move(0, 0)
page.mouse.up()
```

</TabItem>
<TabItem value="async">

```py
# using ‘page.mouse’ to trace a 100x100 square.
await page.mouse.move(0, 0)
await page.mouse.down()
await page.mouse.move(0, 100)
await page.mouse.move(100, 100)
await page.mouse.move(100, 0)
await page.mouse.move(0, 0)
await page.mouse.up()
```

</TabItem>
</Tabs>


- [mouse.click(x, y, **kwargs)](./api/class-mouse.mdx#mouse-click)
- [mouse.dblclick(x, y, **kwargs)](./api/class-mouse.mdx#mouse-dblclick)
- [mouse.down(**kwargs)](./api/class-mouse.mdx#mouse-down)
- [mouse.move(x, y, **kwargs)](./api/class-mouse.mdx#mouse-move)
- [mouse.up(**kwargs)](./api/class-mouse.mdx#mouse-up)
- [mouse.wheel(delta_x, delta_y)](./api/class-mouse.mdx#mouse-wheel)

## mouse.click(x, y, **kwargs) {#mouse-click}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-x"/> &#60;[float]&#62;<a href="#mouse-click-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-y"/> &#60;[float]&#62;<a href="#mouse-click-option-y" class="list-anchor">#</a>
- `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-click-option-button" class="list-anchor">#</a>
- `click_count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-click-count"/> &#60;[int]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-click-option-click-count" class="list-anchor">#</a>
- `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-delay"/> &#60;[float]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-click-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-return"/> &#60;[NoneType]&#62;<a href="#mouse-click-return" class="list-anchor">#</a>

Shortcut for [mouse.move(x, y, **kwargs)](./api/class-mouse.mdx#mouse-move), [mouse.down(**kwargs)](./api/class-mouse.mdx#mouse-down), [mouse.up(**kwargs)](./api/class-mouse.mdx#mouse-up).

## mouse.dblclick(x, y, **kwargs) {#mouse-dblclick}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-x"/> &#60;[float]&#62;<a href="#mouse-dblclick-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-y"/> &#60;[float]&#62;<a href="#mouse-dblclick-option-y" class="list-anchor">#</a>
- `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-dblclick-option-button" class="list-anchor">#</a>
- `delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-delay"/> &#60;[float]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-dblclick-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-return"/> &#60;[NoneType]&#62;<a href="#mouse-dblclick-return" class="list-anchor">#</a>

Shortcut for [mouse.move(x, y, **kwargs)](./api/class-mouse.mdx#mouse-move), [mouse.down(**kwargs)](./api/class-mouse.mdx#mouse-down), [mouse.up(**kwargs)](./api/class-mouse.mdx#mouse-up), [mouse.down(**kwargs)](./api/class-mouse.mdx#mouse-down) and [mouse.up(**kwargs)](./api/class-mouse.mdx#mouse-up).

## mouse.down(**kwargs) {#mouse-down}
- `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-down-option-button" class="list-anchor">#</a>
- `click_count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-click-count"/> &#60;[int]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-down-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-return"/> &#60;[NoneType]&#62;<a href="#mouse-down-return" class="list-anchor">#</a>

Dispatches a `mousedown` event.

## mouse.move(x, y, **kwargs) {#mouse-move}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-x"/> &#60;[float]&#62;<a href="#mouse-move-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-y"/> &#60;[float]&#62;<a href="#mouse-move-option-y" class="list-anchor">#</a>
- `steps`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-steps"/> &#60;[int]&#62; defaults to 1. Sends intermediate `mousemove` events.<a href="#mouse-move-option-steps" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-return"/> &#60;[NoneType]&#62;<a href="#mouse-move-return" class="list-anchor">#</a>

Dispatches a `mousemove` event.

## mouse.up(**kwargs) {#mouse-up}
- `button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-button"/> &#60;"left"|"right"|"middle"&#62; Defaults to `left`.<a href="#mouse-up-option-button" class="list-anchor">#</a>
- `click_count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-click-count"/> &#60;[int]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-up-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-return"/> &#60;[NoneType]&#62;<a href="#mouse-up-return" class="list-anchor">#</a>

Dispatches a `mouseup` event.

## mouse.wheel(delta_x, delta_y) {#mouse-wheel}
- `delta_x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-x"/> &#60;[float]&#62; Pixels to scroll horizontally.<a href="#mouse-wheel-option-delta-x" class="list-anchor">#</a>
- `delta_y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-y"/> &#60;[float]&#62; Pixels to scroll vertically.<a href="#mouse-wheel-option-delta-y" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-return"/> &#60;[NoneType]&#62;<a href="#mouse-wheel-return" class="list-anchor">#</a>

Dispatches a `wheel` event.

:::note
Wheel events may cause scrolling if they are not handled, and this method does not wait for the scrolling to finish before returning.
:::


[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./api/class-apiresponseassertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
